2010-05-27  Tobias Liebig  <mail_typo3@etobi.de>

	* Follow-up to bug #3800: change the label names (warning about empty reference index table) (thanks to Michael Knabe)

2010-05-28  Susanne Moog  <typo3@susanne-moog.de>

	* Follow-up to bug #14465: Make use of the new Sprite API throughout the TYPO3 Core Backend
	* Fixed bug #1402: Text area / RTE fields can't be set to required at the moment.

2010-05-28  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #9731: Wrong XCLASS definition in t3lib/t3lib_rteapi.php (Thanks to Marcus Schwemer)
	* Fixed bug #7015: t3lib_DB displays wrong SQL in error case (Thanks to Steffen Ritter)

2010-05-28  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #14342: t3lib_compressor does not rewrite "data:" URIs (Thanks to Steffen Gebert)

2010-05-28  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raised Extbase version from 1.2.0beta1 to 1.2.0beta2

2010-05-28  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL version from 1.1.5 to 1.1.6

2010-05-27  Jeff Segars  <jeff@webempoweredchurch.org>

	* Follow-up to bug #14486: Sprite icons not shown in Safari and IE6 (thanks to Steffen Ritter)
	* Follow-up to bug #14486: Fix transparency on frontend and backend user icons (thanks to Steffen Gebert and Steffen Ritter)

2010-05-27  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #14496: SQL parser does not handle ALTER TABLE with character set operation
	* Follow-up of bug #13670: forgotten reset/each statement caused side effect of using foreach statement
	* Fixed bug #14456: SQL parser doesn't accept ALTER TABLE statement without CHANGE, DROP or ADD keyword
	* Fixed bug #13934: Side-effect of substr in t3lib_cs (thanks to Rens Admiraal)

2010-05-27  Jochen Rau <jochen.rau@typoplanet.de>

	* Fixed bug #13604: PHP Warning from t3lib_loadmodules after installing extbase, because $TBE_MODULES['_dispatcher'] is not unset (thanks to Marc Bastian Heinrichs)

2010-05-27  Tobias Liebig  <mail_typo3@etobi.de>
